{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 266,
  "lineage": "3c77e3a0-c02b-5015-6f77-f244e1d93e63",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0662f4965dfc70aca",
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:instance/i-068e548a589573a5d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068e548a589573a5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair-kube-master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c332628e2890e8fe",
            "private_dns": "ip-10-0-1-83.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-43-200-7-60.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.7.60",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09f2b4c3f90452e4e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f013f809067a94f6",
            "tags": {
              "Name": "v3-prod-bastion"
            },
            "tags_all": {
              "Name": "v3-prod-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05feda5bd896f917b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:security-group/sg-05feda5bd896f917b",
            "description": "Allow SSH from admin IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05feda5bd896f917b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "v3-prod-bastion-sg",
            "name_prefix": "",
            "owner_id": "084375578827",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "v3-prod-bastion-sg"
            },
            "tags_all": {
              "Name": "v3-prod-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-071785d5d50ee32d7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:security-group/sg-00e55aff6cd272a9f",
            "description": "Allow MySQL traffic from backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e55aff6cd272a9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.5.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "v3-prod-rds-rds-sg",
            "name_prefix": "",
            "owner_id": "084375578827",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-071785d5d50ee32d7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074effc2ad3fe72c0",
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:elastic-ip/eipalloc-074effc2ad3fe72c0",
            "association_id": "eipassoc-0de2784473b543d73",
            "domain": "vpc",
            "id": "eipalloc-074effc2ad3fe72c0",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0a85b9328a83f5d85",
            "private_dns": "ip-10-0-1-222.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.222",
            "public_dns": "ec2-3-38-231-191.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.231.191",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:internet-gateway/igw-0aa431354c9244c87",
            "id": "igw-0aa431354c9244c87",
            "owner_id": "084375578827",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "prod-IGW"
            },
            "tags_all": {
              "Name": "prod-IGW"
            },
            "vpc_id": "vpc-071785d5d50ee32d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074effc2ad3fe72c0",
            "association_id": "eipassoc-0de2784473b543d73",
            "connectivity_type": "public",
            "id": "nat-07ce37ee57684bb31",
            "network_interface_id": "eni-0a85b9328a83f5d85",
            "private_ip": "10.0.1.222",
            "public_ip": "3.38.231.191",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f013f809067a94f6",
            "tags": {
              "Name": "prod-NGW"
            },
            "tags_all": {
              "Name": "prod-NGW"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:route-table/rtb-083d327d5a848ddb9",
            "id": "rtb-083d327d5a848ddb9",
            "owner_id": "084375578827",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ce37ee57684bb31",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private-RT"
            },
            "tags_all": {
              "Name": "prod-private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-071785d5d50ee32d7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:route-table/rtb-0f6a8e3eec0616780",
            "id": "rtb-0f6a8e3eec0616780",
            "owner_id": "084375578827",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa431354c9244c87",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-RT"
            },
            "tags_all": {
              "Name": "prod-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-071785d5d50ee32d7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f0040846689daff",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-083d327d5a848ddb9",
            "subnet_id": "subnet-0ee7771108441b7ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private-a",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068e303d87860251d",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-083d327d5a848ddb9",
            "subnet_id": "subnet-0746c4f099ba658a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private-b",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06379eaa5e9b76128",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-083d327d5a848ddb9",
            "subnet_id": "subnet-008e6bb75a6c5e1bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private-c",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07434b5f15502d294",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0f6a8e3eec0616780",
            "subnet_id": "subnet-0f013f809067a94f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3fc9a763ff02667",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0f6a8e3eec0616780",
            "subnet_id": "subnet-03eae9943b3054d0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public-c",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:subnet/subnet-0ee7771108441b7ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee7771108441b7ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375578827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "prod-private-azone-subnet"
            },
            "tags_all": {
              "Name": "prod-private-azone-subnet"
            },
            "vpc_id": "vpc-071785d5d50ee32d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:subnet/subnet-0746c4f099ba658a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0746c4f099ba658a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375578827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "prod-private-bzone-subnet"
            },
            "tags_all": {
              "Name": "prod-private-bzone-subnet"
            },
            "vpc_id": "vpc-071785d5d50ee32d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:subnet/subnet-008e6bb75a6c5e1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008e6bb75a6c5e1bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375578827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "prod-private-czone-subnet"
            },
            "tags_all": {
              "Name": "prod-private-czone-subnet"
            },
            "vpc_id": "vpc-071785d5d50ee32d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:subnet/subnet-0f013f809067a94f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f013f809067a94f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375578827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "prod-public-azone-subnet"
            },
            "tags_all": {
              "Name": "prod-public-azone-subnet"
            },
            "vpc_id": "vpc-071785d5d50ee32d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:subnet/subnet-03eae9943b3054d0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eae9943b3054d0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375578827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "prod-public-czone-subnet"
            },
            "tags_all": {
              "Name": "prod-public-czone-subnet"
            },
            "vpc_id": "vpc-071785d5d50ee32d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:084375578827:vpc/vpc-071785d5d50ee32d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae5318a8667dca14",
            "default_route_table_id": "rtb-05c5548699380d334",
            "default_security_group_id": "sg-0fc7380697e972eb8",
            "dhcp_options_id": "dopt-0f5a6807b7f134617",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071785d5d50ee32d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c5548699380d334",
            "owner_id": "084375578827",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "v3-prod-VPC"
            },
            "tags_all": {
              "Name": "v3-prod-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}